fixed possible crash with logo search